<resources>
    <string name="app_name">Health Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_question">Don´t have account? SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="splash" translatable="false">HealthUp</string>
    <string name="logo">Logo Image</string>
    <string name="abdominal">abdominal</string>
    <string name="onboarding_welcome">WELCOME!!</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_confirm">Confirm</string>
    <string name="onboardong_finish">FINISH</string>
    <string name="confPass">Confirm Password</string>
    <string name="bttCreate">Create account</string>
    <string name="ttlpassword">Create a Password</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_excercise">Exercise</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_favorites">Favorites</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="ready">Ready to Start!</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="name">Name</string>
    <string name="days">Capable days</string>
    <string name="next">NEXT</string>
    <string name="health_up">Health_Up</string>
    <string name="ttl_capable_days">Your training days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="back">back</string>
    <string name="change_e">Change email</string>
    <string name="change_p">Change password</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>

    <!--     TITLES     -->
    <string name="register_gender_title">Tell us about you</string>
    <string name="register_age_title">How old are you?</string>
    <string name="register_weight_title">Tell us your weight</string>
    <string name="register_height_title">and your height</string>
    <string name="register_name_title">Your name is...</string>
    <string name="register_register_title">and your email?</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>

    <string name="onboarding_welcome_title">WELCOME!!</string>
    <string name="onboarding_terms_and_conditions_title">Terms and Conditions</string>
    <string name="onboarding_usage_title">Usage</string>
    <string name="onboarding_authors_title">Authors</string>
    <string name="kg_symbol">kg</string>
    <string name="cm_symbol">cm</string>
    <string name="category_title">CATEGORY</string>

    <string-array name="onboarding_welcome">
        <item>"Welcome to Health Up"</item>
        <item>"In this application you can have a healthier life with a plan designed for you"</item>
        <item>"These Terms and Conditions of Use regulate the rules to which the use of Health Up is subject."</item>
        <item>"Downloading or using the application attributes the condition of User to whoever does so and implies acceptance of all the conditions included in this document and in the Privacy Policy and Legal Notice of said Web page."</item>
    </string-array>
    <string-array name="onboarding_terms_and_conditions">
        <item>"1. The User should read these conditions each time they use the application, since they could be modified in the future."</item>
        <item>"2. Only Users expressly authorized by Health up will be able to download and use the application.\nUsers who do not have authorization will not be able to access said content."</item>
        <item>"3. Charges: You are responsible for payment of all costs or expenses you incur as a result of downloading and using the Health Up Application, including any carrier network or roaming charges. Check with your service provider for details on this."</item>
        <item>"4. Anonymous Statistics: Health Up reserves the right to track your activity on the Application and report it to our third-party statistical service providers. All this anonymously."</item>
        <item>"5. Protection of your personal information: we want to help you carry out all the necessary steps to protect your privacy and information.\nPlease review the Health Up Privacy Policy and App privacy notices to learn what information we collect and the steps we take to protect your personal information."</item>
    </string-array>
    <string-array name="onboarding_usage">
        <item>"This application keep track of your diet and exercise to lead a healthy life"</item>
        <item>"You have a profile where you can see all your data and edit it"</item>
        <item>"In the exercises part you can search for the type of training you want to do"</item>
        <item>"In the food part we will recommend recipes according to your preferences"</item>
        <item>"You can also save your preferred exercises and recipes in the favorites section"</item>
    </string-array>
    <string-array name="onboarding_authors">
        <!--            autores -->
        <item>"Joaquin Ayllon"</item>
        <item>"Alvaro Bell"</item>
        <item>"Jordan Chimborazo"</item>
        <item>"Marta López"</item>
        <item>"https://github.com/JoaquinAyG/Health_Up"</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

