<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Profile preferences">

        <EditTextPreference
            app:key="email"
            app:title="@string/change_e" />

        <EditTextPreference
            app:key="pssw"
            app:title="@string/change_p" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notifications">

        <SwitchPreferenceCompat
            app:key="not"
            app:title="Enable notifications" />


    </PreferenceCategory>
    <PreferenceCategory app:title="Extra">

        <MultiSelectListPreference></MultiSelectListPreference>

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>