<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        tools:context=".CapableDaysActivity">

        <!--Title-->
        <TextView
            android:id="@+id/tv_title_capable_days"
            style="@style/register_titles"
            android:text="@string/ttl_capable_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_1_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_toggle_top_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_capable_days">

            <android.widget.ToggleButton
                android:id="@+id/btMonday"
                style="@style/register_toggle_button"
                android:textOff="@string/monday"
                android:textOn="@string/monday" />

            <android.widget.ToggleButton
                android:id="@+id/btTuesday"
                style="@style/register_toggle_button"
                android:textOff="@string/tuesday"
                android:textOn="@string/tuesday" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_toggle_top_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_1_row">

            <android.widget.ToggleButton
                android:id="@+id/btWednesday"
                style="@style/register_toggle_button"
                android:textOff="@string/wednesday"
                android:textOn="@string/wednesday" />

            <android.widget.ToggleButton
                android:id="@+id/btThursday"
                style="@style/register_toggle_button"
                android:textOff="@string/thursday"
                android:textOn="@string/thursday" />

            <android.widget.ToggleButton
                android:id="@+id/btFriday"
                style="@style/register_toggle_button"
                android:textOff="@string/friday"
                android:textOn="@string/friday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_toggle_top_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_2_row">

            <android.widget.ToggleButton
                android:id="@+id/btSaturday"
                style="@style/register_toggle_button"
                android:textOff="@string/saturday"
                android:textOn="@string/saturday" />

            <android.widget.ToggleButton
                android:id="@+id/btSunday"
                style="@style/register_toggle_button"
                android:textOff="@string/sunday"
                android:textOn="@string/sunday" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>