<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light">

        <TextView
            android:id="@+id/tv_title_gender"
            style="@style/register_titles"
            android:text="@string/register_gender_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/btn_male"
            style="@style/register_toggle_button"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:textOff="@string/male"
            android:textOn="@string/male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_gender" />

        <ToggleButton
            android:id="@+id/btn_female"
            style="@style/register_toggle_button"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:textOff="@string/female"
            android:textOn="@string/female"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_male" />

        <ToggleButton
            android:id="@+id/btn_other"
            style="@style/register_toggle_button"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:textOff="@string/other"
            android:textOn="@string/other"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_female" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>