<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        tools:context=".fragments.register.FragmentPasswordActivity">


        <TextView
            android:id="@+id/tv_title_password"
            style="@style/register_titles"
            android:text="@string/ttlpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_password"
            style="@style/login_et"
            android:layout_marginTop="160dp"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_password" />


        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/login_et"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/confPass"
            android:inputType="textPassword"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>