<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:theme="@style/Theme.HealthUp">

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_change_password"
            style="@style/button_settings"
            android:layout_width="300dp"
            android:layout_height="74dp"
            android:layout_marginTop="170dp"
            android:text="@string/change_p"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textStartPadding="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_about_us"
            style="@style/button_settings"
            android:layout_width="300dp"
            android:layout_height="74dp"
            android:layout_marginTop="-10dp"
            android:text="@string/about_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_change_password"
            app:textStartPadding="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_log_out"
            style="@style/button_settings"
            android:layout_width="300dp"
            android:layout_height="74dp"
            android:layout_marginTop="20dp"
            android:text="@string/log_out"
            android:textColor="@color/accentRed"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_about_us"
            app:textStartPadding="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>