<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:paddingTop="@dimen/toolbar_height">

        <!--GuideLines-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.151" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.849" />

        <!--Title-->
        <TextView
            android:id="@+id/ttlCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ready"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/ttlCheck" />

        <!--Gender-->
        <TextView
            android:id="@+id/gender"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/gender"
            app:layout_constraintEnd_toStartOf="@id/edit_gender"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/imagen" />

        <TextView
            android:id="@+id/edit_gender"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ellipsize="end"
            android:maxLines="1"
            android:text="female"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/gender"
            app:layout_constraintTop_toBottomOf="@id/imagen" />

        <!--Age-->
        <TextView
            android:id="@+id/age"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/age"
            app:layout_constraintEnd_toStartOf="@id/edit_gender"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/gender" />

        <TextView
            android:id="@+id/edit_age"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ellipsize="end"
            android:inputType="text"
            android:maxLines="1"
            android:text="22"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/age"
            app:layout_constraintTop_toBottomOf="@id/edit_gender" />

        <!--Weight-->
        <TextView
            android:id="@+id/weight"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/weight"
            app:layout_constraintEnd_toStartOf="@id/edit_weight"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <TextView
            android:id="@+id/edit_weight"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="62"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/age"
            app:layout_constraintTop_toBottomOf="@id/edit_age" />

        <!--Height-->
        <TextView
            android:id="@+id/height"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/height"
            app:layout_constraintEnd_toStartOf="@id/edit_height"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/weight" />

        <TextView
            android:id="@+id/edit_height"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="168"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/height"
            app:layout_constraintTop_toBottomOf="@id/edit_weight" />

        <!--Name-->
        <TextView
            android:id="@+id/name"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@id/edit_name"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/height" />

        <TextView
            android:id="@+id/edit_name"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Laura"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/edit_height" />

        <!--Email-->
        <TextView
            android:id="@+id/email"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/email"
            app:layout_constraintEnd_toStartOf="@id/edit_name"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/edit_email"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="16675667"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/edit_name" />

        <!--Capable days-->
        <TextView
            android:id="@+id/days"
            style="@style/txview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/days"
            app:layout_constraintEnd_toStartOf="@id/edit_days"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/edit_days"
            style="@style/edtext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="3/week"
            app:layout_constraintEnd_toStartOf="@id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>