<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OnBoardingActivity"
    android:background="@color/gray_light"
    android:theme="@style/Theme.HealthUpNoActionBar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/onboarding_welcome" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBot"
         />

    <LinearLayout
        android:id="@+id/llSliderDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/vp_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/button_main_height"
        android:text="@string/onboarding_continue"
        style="@style/LoginButtons"
        android:background="@drawable/main_btn"
        app:layout_constraintTop_toTopOf="@+id/guidelineBot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_finish"
        android:visibility="gone"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/button_main_height"
        android:text="@string/onboardong_finish"
        style="@style/LoginButtons"
        android:background="@drawable/main_btn"
        app:layout_constraintTop_toTopOf="@+id/guidelineBot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="@id/btn_continue" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
